// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Appearance /> renders correctly when \`rsvpUrl\` prop is defined 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-10T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="location name - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        location name
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-rsvp"
      >
        <a
          class="Appearance-rsvpLink Button"
          href="rsvpUrl"
          rel="noopener"
          target="_blank"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 80v352c0 26.5-21.5 48-48 48h-85.3V302.8h60.6l8.7-67.6h-69.3V192c0-19.6 5.4-32.9 33.5-32.9H384V98.7c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9H184v67.6h60.9V480H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h352c26.5 0 48 21.5 48 48z"
            />
          </svg>
           
          <span>
            RSVP on Facebook
          </span>
        </a>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> renders correctly when finishingAt < now 1`] = `
<article
  class="Appearance isFinished"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2017-12-31T00:00:00"
          title="12:00 AM"
        >
          12:00 AM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="location name - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        location name
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> renders correctly when status=EventCancelled 1`] = `
<article
  class="Appearance isCancelled"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-10T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="location name - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        location name
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
        <div
          class="Meta Appearance-status"
        >
           
          <span
            class="Meta-label"
          >
            <span>
              Status
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <span>
              Cancelled
            </span>
          </span>
        </div>
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> renders correctly when status=EventPostponed 1`] = `
<article
  class="Appearance isPostponed"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-10T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="location name - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        location name
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
        <div
          class="Meta Appearance-status"
        >
           
          <span
            class="Meta-label"
          >
            <span>
              Postponed
            </span>
            :
          </span>
           
          <span
            class="Meta-value"
          >
            <span>
              Postponed
            </span>
          </span>
        </div>
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> renders correctly with all props 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-10T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="undefined - location address"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      />
    </div>
    <div
      class="Meta Appearance-audience"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Audience
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        audience
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
      <section
        class="Appearance-tickets"
      >
        <h2>
          <span>
            Get tickets
          </span>
        </h2>
        <div
          class="Appearance-tickets-items"
        >
          <article
            class="SaleListing"
          >
            <span
              class="SaleListing-link"
            >
              <div
                class="SaleListing-icon"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M128 160h320v192H128V160zm400 96c0 26.51 21.49 48 48 48v96c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48v-96c26.51 0 48-21.49 48-48s-21.49-48-48-48v-96c0-26.51 21.49-48 48-48h480c26.51 0 48 21.49 48 48v96c-26.51 0-48 21.49-48 48zm-48-104c0-13.255-10.745-24-24-24H120c-13.255 0-24 10.745-24 24v208c0 13.255 10.745 24 24 24h336c13.255 0 24-10.745 24-24V152z"
                  />
                </svg>
              </div>
              <div
                class="SaleListing-details"
              >
                <h3>
                  sales 1 name: 
                  <span
                    class="Price"
                  >
                    <span>
                      NaN
                    </span>
                  </span>
                </h3>
                <section
                  class="SaleListing-meta"
                />
              </div>
            </span>
          </article>
        </div>
      </section>
    </div>
    <section
      class="Appearance-images"
    >
      <h2>
        <span>
          Photos
        </span>
      </h2>
      <div
        class="ImageGallery Appearance-images-items"
      >
        <figure
          class="Image isLoading"
          role="button"
          tabindex="0"
        >
          <div
            class="Image-wrapper"
          >
            <img
              alt="images 1 title"
              src="images 1 imageUrl"
            />
            <span
              class="Loader"
            >
              <div
                class="Loader-animation"
              >
                <span />
                <span />
                <span />
              </div>
            </span>
          </div>
          <figcaption>
            images 1 title
          </figcaption>
        </figure>
        <figure
          class="Image isLoading"
          role="button"
          tabindex="0"
        >
          <div
            class="Image-wrapper"
          >
            <img
              alt="images 2 title"
              src="images 2 imageUrl"
            />
            <span
              class="Loader"
            >
              <div
                class="Loader-animation"
              >
                <span />
                <span />
                <span />
              </div>
            </span>
          </div>
          <figcaption>
            images 2 title
          </figcaption>
        </figure>
      </div>
    </section>
    <section
      class="Appearance-map"
    >
      <h2>
        <span>
          Location
        </span>
      </h2>
      <div
        class="Map"
      >
        <div
          class="Map-element Appearance-map-googleMap"
          style="position:absolute;width:100%;height:100%"
        >
          <div
            style="position:absolute;left:0;right:0;bottom:0;top:0;display:inherit"
          >
            Loading map...
          </div>
        </div>
      </div>
    </section>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> renders correctly with minimum props 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-10T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="location name - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        location name
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> updates \`isImageLoaded\` state when image has loaded 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-10T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="location name - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        location name
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isRendered"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;

exports[`[presentation] <Appearance /> updates \`isImageLoaded\` state when image has previously been loaded 1`] = `
<article
  class="Appearance"
>
  <header
    class="PageHeader"
  >
    <h1 />
  </header>
  <div
    class="MetaBar Appearance-meta"
  >
    <div
      class="Meta Appearance-date"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Date
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="Wednesday, October 10, 2018"
        >
          Wednesday, October 10, 2018
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-time"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Time
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        <time
          class="DateTime"
          datetime="2018-10-10T18:00:00"
          title="6:00 PM"
        >
          6:00 PM
        </time>
        –
        <time
          class="DateTime"
          datetime="2018-10-10T20:00:00"
          title="8:00 PM"
        >
          8:00 PM
        </time>
      </span>
    </div>
    <div
      class="Meta Appearance-location"
      title="location name - undefined"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
        />
      </svg>
       
      <span
        class="Meta-label"
      >
        <span>
          Location
        </span>
        :
      </span>
       
      <span
        class="Meta-value"
      >
        location name
      </span>
    </div>
  </div>
  <div
    class="Appearance-body"
  >
    <figure
      class="Image Appearance-image isRendered"
    >
      <div
        class="Image-wrapper"
      >
        <img
          src="imageUrl"
        />
      </div>
    </figure>
    <div
      class="Appearance-details"
    >
      <section
        class="Appearance-description"
      >
        <p>
          description
        </p>
      </section>
      <section
        class="Appearance-acts"
      >
        <h2>
          <span>
            Featured acts
          </span>
        </h2>
        <div
          class="Appearance-acts-items"
        >
          <article
            class="ActListing"
          >
            <span
              class="ActListing-link"
            >
              <div
                class="ActListing-details"
              >
                <h3>
                  act name
                </h3>
                <section
                  class="ActListing-meta"
                >
                  <div
                    class="Meta ActListing-genre"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Genre
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    >
                      act genre
                    </span>
                  </div>
                  <div
                    class="Meta ActListing-location"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                     
                    <span
                      class="Meta-label"
                    >
                      <span>
                        Location
                      </span>
                      :
                    </span>
                     
                    <span
                      class="Meta-value"
                    />
                  </div>
                </section>
              </div>
              <figure
                class="ActListing-image"
              >
                <img
                  alt="act name"
                  src="act imageUrl"
                />
              </figure>
            </span>
          </article>
        </div>
      </section>
    </div>
  </div>
</article>
`;
